Dynamic Image Generator Finish !

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wrapper">
         <h1>Dynamic Image Generator !</h1>
-        <p>Use the fields to input an dummyimage URL, your desired width, height, backgound, color and text</p>
+        <p>Use the fields to input an dummyimage URL, your desired width, height, backgound, color and text.</p>
     <form id="app">
         <select name="url" id="url">
             <option id="url "value="https://dummyimage.com">https://dummyimage.com</option>
@@ -26,7 +26,7 @@
             <span></span>
             <input type="text" id="color" placeholder="Color" value="ffffff">
         </div>
-        <input type="text" id="text" placeholder="Text" value="Hello World">
+        <input type="text" id="text" placeholder="Text" value="It's Magic !">
     </form>
     <a id="picture" href="" target="_blank"></a>
     <img src="">	
